common/miniflux/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app.kubernetes.io/name: miniflux
    app.kubernetes.io/instance: miniflux
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: miniflux
    app.kubernetes.io/instance: miniflux
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
